# vdk-os

./: .gdbinit-example  .gitignore  CMakeLists.txt  Makefile  README.md  boot.asm  ckernel.c  create-iso.sh  grub.cfg  run-qemu-debug.sh  run-qemu.sh  run.sh  tester.sh
kernel/: CMakeLists.txt  ckernel.c  kernel.cpp  os_kernel.cpp
kernel/arch/x86_64/: boot.asm  linker.ld  tty.cpp
kernel/include/: colored_char.hpp  exceptions.hpp  idt.hpp  tty.hpp  util.hpp
kernel/src/: colored_char.cpp  exceptions.cpp  idt.asm  idt.cpp
libc/: CMakeLists.txt  test_lib.c  test_lib.h
src/kernel/: CMakeLists.txt  cppkernel.cpp  kernel.cpp
src/kernel/arch/x86_64/: linker.ld  multiboot_header.asm  tty.cpp
src/kernel/arch/x86_64/boot/: boot.asm  check_cpuid.asm  check_long_mode.asm  error.asm  multiboot_header.asm
src/kernel/arch/x86_64/cpu/: enable_long_mode.asm  idt.asm
src/kernel/arch/x86_64/mem/: mem.asm
src/kernel/include/: panic.hpp  tty.hpp
src/kernel/include/boot/: multiboot_stuff.hpp  multiboot_tag_iterator.hpp
src/kernel/include/cpu/: exceptions.hpp  idt.hpp  idtr.hpp
src/kernel/include/cpu/gdt/: gdt_descriptor.hpp  gdt_entry.hpp  gdt_utils.hpp  gdtr.hpp
src/kernel/include/mem/: mem.hpp  page_table_entry.hpp
src/kernel/include/util/: static_asserts.hpp  util.hpp
src/kernel/src/: panic.cpp
src/kernel/src/boot/: boot.asm  check_multiboot.asm  multiboot_header.asm  multiboot_tag_iterator.cpp
src/kernel/src/cpu/: exceptions.cpp  idt.cpp  idtr.cpp
src/kernel/src/cpu/gdt/: gdt_descriptor.cpp  gdt_entry.cpp  gdt_utils.asm  gdt_utils.cpp  gdtr.cpp
src/kernel/src/mem/: enable_paging.asm  mem.cpp  page_table_entry.cpp
src/kernel/src/util/: util.asm
src/libcpp/: CMakeLists.txt
src/libcpp/abi/: icxxabi.cpp  icxxabi.hpp
